[gd_scene load_steps=6 format=3 uid="uid://761dy3ureg4v"]

[ext_resource type="Script" path="res://src/player.gd" id="1_0jc27"]
[ext_resource type="Texture2D" uid="uid://8rsbnmbelxna" path="res://assets/face2.png" id="2_ppxyd"]
[ext_resource type="Texture2D" uid="uid://dyuu4w6g0bvi5" path="res://assets/shields.png" id="3_ml8mk"]
[ext_resource type="Script" path="res://src/shields.gd" id="3_t4mvq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0wdoi"]
radius = 32.0624

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
motion_mode = 1
script = ExtResource("1_0jc27")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ppxyd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0wdoi")

[node name="Shields" type="Node2D" parent="."]
script = ExtResource("3_t4mvq")

[node name="TopLeft" type="Area2D" parent="Shields"]
position = Vector2(-27, -30)
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Shields/TopLeft"]
texture = ExtResource("3_ml8mk")
hframes = 2
vframes = 2
region_rect = Rect2(0, 0, 40.7364, 46.7832)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shields/TopLeft"]
polygon = PackedVector2Array(-21, 18, -21, 18, 12, -23, 1, -22, -7, -16, -23, 2)

[node name="TopRight" type="Area2D" parent="Shields"]
position = Vector2(33, -30)
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Shields/TopRight"]
texture = ExtResource("3_ml8mk")
hframes = 2
vframes = 2
frame = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shields/TopRight"]
polygon = PackedVector2Array(-21, -22, -1, -22, 11, -13, 24, 8, 24, 18, 21, 18)

[node name="BotLeft" type="Area2D" parent="Shields"]
position = Vector2(-29, 33)
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Shields/BotLeft"]
texture = ExtResource("3_ml8mk")
hframes = 2
vframes = 2
frame = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shields/BotLeft"]
polygon = PackedVector2Array(-20, -24, -20, -10, -13, 5, -2, 13, 9, 19, 24, 20, 25, 17, -17, -25)

[node name="BotRight" type="Area2D" parent="Shields"]
position = Vector2(36, 33)
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 4

[node name="Sprite2D" type="Sprite2D" parent="Shields/BotRight"]
texture = ExtResource("3_ml8mk")
hframes = 2
vframes = 2
frame = 3

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shields/BotRight"]
polygon = PackedVector2Array(-20, 20, -2, 19, 7, 15, 15, 7, 20, -6, 18, -19)
